# clm-ml-jax

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NEXT_STEPS.md  README.md  environment.yml  experiment_plan.md  parameter_optimization_experiment.md  pyproject.toml  pytest.ini  run_1cpu.pbs  run_3cpu.pbs  run_benchmark_cpu.pbs  run_benchmark_gpu.pbs  run_calibration_demo.sh  run_claude.sh  run_clm_jax.pbs  run_clm_slurm.sh  run_diags_gpu.pbs  run_fd_grad_check.sh  run_gpu.pbs  run_isolate_grad_path.sh  run_sensitivity_analysis.sh  run_test_bisect_ift.sh  run_test_ci_solver_grad.sh  run_test_photo_kernel_grad.sh
.github/: copilot-instructions.md
bashscripts/: run_aot_compile.sh  run_calibration_demo.sh  run_calibration_vcmax_iota.sh  run_claude.sh  run_dpai_jacobian_check.sh  run_ensemble_benchmark.sh  run_ensemble_cpu_1024.sh  run_ensemble_cpu_2048.sh  run_ensemble_cpu_512.sh  run_fd_grad_check.sh  run_fortran_timing.sh  run_fortran_timing_portable.sh  run_grad_mode_comparison.sh  run_jax_timing.sh  run_laxscan_benchmark.sh  run_le_h_grad_check.sh  run_multipar_calibration.sh  run_multisite_benchmark.sh  run_optimize_params.sh  run_param_sensitivity.sh  run_plot_benchmarks.sh  run_sensitivity_analysis.sh  run_test_bisect_ift.sh  run_test_ci_solver_grad.sh  run_test_photo_kernel_grad.sh
diags/: README.md  __init__.py  ad_vs_fd_scaling.py  aot_compile.py  benchmark_backward_pass.py  benchmark_cpu_compile.py  benchmark_ensemble.py  benchmark_ensemble_cpu_1024.py  benchmark_ensemble_cpu_2048.py  benchmark_ensemble_cpu_512.py  expt_init.py  (+56 more)
(+201 files in other folders)
