[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clm-ml-jax"
version = "0.1.0"
description = "JAX translation of CLM-ML (Community Land Model with Multi-Layer Canopy)"
requires-python = ">=3.9"
license = "BSD-3-Clause"
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpy>=1.20.0",
    "matplotlib>=3.7.0",
    "f90nml>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "netCDF4>=1.6.0",
]

[project.scripts]
clm-ml-offline = "offline_executable.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "clm_share*",
    "clm_src_biogeophys*",
    "clm_src_cpl*",
    "clm_src_main*",
    "clm_src_utils*",
    "clubb_core*",
    "multilayer_canopy*",
    "offline_driver*",
    "offline_executable*",
    "utils*",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401"]
